# DasherCoreRust

./: Cargo.toml  README.md
.github/workflows/: bindings.yml
data/alphabets/: ConvertAlphabet.py  alphabet.deutsch.german.with.limited.punctuation.xml  alphabet.deutsch.german.with.numerals.and.punctuation.xml  alphabet.dtd  alphabet.english.latex.xml  alphabet.english.lower.case.xml  alphabet.english.with.accents.numerals.punctuation.xml  alphabet.english.with.limited.punctuation.xml  alphabet.english.with.numerals.and.limited.punctuation.xml  alphabet.english.with.numerals.and.lots.of.punctuation.xml  alphabet.english.without.punctuation.xml
data/alphabets/autoConverted/: alphabet..klingon.tlhingan.hol.xml  alphabet..runic.xml  alphabet.abc.musical.language.xml  alphabet.adangbe.with.lots.of.punctuation.xml  alphabet.afaan.oromo.with.numerals.and.punctuation.xml  alphabet.afrikaans.with.punctuation.and.numerals.xml  alphabet.akan.twi.with.lots.of.punctuation.xml  alphabet.amharic.with.punctuation.and.numerals.xml  alphabet.ar.brezhoneg.breton.with.punctuation.and.numerals.xml  alphabet.assamese..with.punctuation.and.numerals.xml  alphabet.azrbaycanca.azeri.azerbaijani.with.punctuation.and.numerals.xml  alphabet.bahasa.indonesia.indonesian.with.numerals.and.punctuation.xml  alphabet.bahasa.melayu.malay.alphabet.with.numerals.and.punctuation.xml  alphabet.belarusian.with.punctuation.and.numerals.xml  alphabet.bosanski.bosnian.with.punctuation.and.numerals.xml  alphabet.bulgarian..with.punctuation.and.numerals.xml  alphabet.burmese.myanmar.with.punctuation.and.numerals.xml  alphabet.cantonese.trad.by.cangjie.xml  alphabet.catal.catalan.combining.accents.with.punctuation.and.numerals.xml  alphabet.catal.catalan.with.punctuation.and.numerals.xml  alphabet.cherokee.xml  alphabet.chinese.pin.yin.with.combining.tones.no.chinese.characters.xml  alphabet.chinese.pin.yin.with.no.tones.no.chinese.characters.xml  alphabet.chinese.pin.yin.with.tones.no.chinese.characters.11.groups.xml  alphabet.chinese.pin.yin.with.tones.no.chinese.characters.5.groups.xml  alphabet.chinese.zhyn.fho..bopomofo.with.punctuation.and.numerals.xml  alphabet.corsu.corsican.with.punctuation.and.numerals.xml  alphabet.cymraeg.welsh.with.punctuation.and.numerals.xml  alphabet.dansk.danish.lower.case.xml  (+115 more)
data/colors/: Readme.txt  color.blue.on.dark.green.xml  color.default.xml  color.europeanasian.for.colourblind.xml  color.europeanasian.original.xml  color.rainbow.xml  color.thai.xml  color.turbolut.xml  color.vowels.xml  color.vowels2.xml  color.yellow.on.black.xml  color.yellow.on.blue.xml
data/colours/: ParseColors.py  color.dtd  colour.turbo.xml
demo/: README.md  build_and_serve.sh  dasher_zoom.html  dasher_zoom.js  demo.html  demo.js
src/: MainWindow.cpp  MainWindow_fixed.cpp  lib.rs  logging.rs  wasm_api.rs  wasm_api_simple.rs
src/action/: mod.rs
src/alphabet/: color_schemes.rs  colors.rs  conversion.rs  discovery.rs  group.rs  info.rs  map.rs  mod.rs  test_alphabet_xml.rs  training.rs  xml.rs
src/api/: mod.rs
src/ffi/: config.rs  context.rs  coordinates.rs  mod.rs
src/input/: circle_start.rs  demo_filter.rs  device.rs  dynamic_filter.rs  filter.rs  frame_rate.rs  mod.rs
src/input/button/: mod.rs  (+4 more)
src/model/: language_model.rs  mod.rs  node.rs  word_prediction.rs
src/settings/: mod.rs
src/view/: mod.rs  square.rs  square_tests.rs
src/wasm/: mod.rs
src/wordgen/: mod.rs
tests/: alphabet_info.rs  alphabet_map.rs  colors.rs  data_integrity.rs  ppm.rs
(+7 files in other folders)
