[package]
name = "dasher_core"
version = "0.1.0"
edition = "2021"
authors = ["Dasher Project Contributors"]
description = "A Rust implementation of the Dasher text entry system core"
license = "GPL-2.0-or-later"
repository = "https://github.com/dasher-project/DasherCore"
readme = "README.md"

[dependencies]
# Core functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

# Optional WebAssembly support
wasm-bindgen = { version = "0.2.88", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }
quick-xml = "0.37.4"
dirs = "6.0.0"
rand = { version = "0.9.1", default-features = false, features = ["getrandom", "js"] }

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
simd = []
js = ["getrandom/js"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
